--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
 server.port=9000
 
-# 禁用thymeleaf缓存
+# \u7981\u7528thymeleaf\u7F13\u5B58
 spring.thymeleaf.cache=false
+
+spring.messages.basename=i18n/messages
