--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,10 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.timeout=3000
 
+baidu.map.service.ak=4qYIXrZ4iWdi4kGU655FYNGoWEdL2mzf
+
+spring.rabbitmq.host=192.168.253.60
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
