--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.messages.basename=i18n/messages
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=root
 spring.datasource.password=1230
-spring.datasource.url=jdbc:mysql://localhost:3306/house?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+# ?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/house?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialSize=10
 spring.datasource.minIdle=10
